--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,9 @@
     "require": {
         "ext-ssh2": "*"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5"
+    },
     "license": "GPL-3.0",
     "autoload": {
         "psr-4": {
